--------
v2.0-git
--------




----------
v1.2.2-cvs
----------

[jan] Fix maildrop rules without conditions (almarin@um.es, Bug #8103).
[cjh] Fix checks for the forward_file and forward_script procmail parameters
      in the VFS driver (Bug #7811).
[cjh] Add %d (domain) as a replaceable variable in the vfs_path parameter
      (dev@stean.ch, Request #7503).
[jan] Make it easier to select the "Create new folder" entry for target folders
      (Bug #7768).
[cjh] Fix reading the current script in the VFS driver (rsalmon@mbpgroup.com,
      Bug #7610).
[cjh] Maildrop vacation rule: don't reply to bulk/list messages, add start/end
      times, better character support in the message, allow subsequent rules
      to execute (rsalmon@mbpgroup.com, Bug #7140).
[cjh] Fix compound header tests in the procmail and maildrop drivers
      (rsalmon@mbpgroup.com, Bugs #7117, #7611).
[jan] Change group field in shares table to work with LDAP groups (Bug #6883).


------
v1.2.1
------

[jan] Don't show script icon in menu if preference to automatically update
      scripts is both set and locked (Request #7251).
[jan] Fix adding more than 5 wildcard blacklists (Bug #7077).
[jan] Add Basque translation (Euskal Herriko Unibertsitatea EHU/UPV
      <xabier.arrieta@ehu.es>).
[jan] Fix saving spam rules in the preference backend (Bug #7033).
[jan] Correctly catch dates before the 10th of a month in Sieve timed
      vacations (Bug #7023).
[mas] Fix vacation with procmail driver (Bugs #6509, #7052).
[jan] Fix moving to INBOX with the maildrop driver.
[jan] Disable drop down entries with informational purpose only.
[jan] Fix filter activity messages with non-ASCII folder names
      (taguchi@iij.ad.jp, Bug #6764).


----
v1.2
----

[cjh] Improve resource usage in datatree_to_sql share migration script
      (Bug #6740).


--------
v1.2-RC3
--------

[cjh] Apply fix for http://dev.rubyonrails.org/ticket/11473 to prototype.js
      (Request #6590).