@@ -184,6 +184,9 @@ class Ingo_Storage_sql extends Ingo_Storage
                 $ob->setForwardAddresses(explode("\n", $data['forward_addresses']), false);
                 $ob->setForwardKeep((bool)$data['forward_keep']);
                 $ob->setSaved(true);
+            } elseif ($data = @unserialize($GLOBALS['prefs']->getDefault('vacation'))) {
+                $ob->setForwardAddresses($data['a'], false);
+                $ob->setForwardKeep($data['k']);
             }
             break;
 
@@ -206,6 +209,19 @@ class Ingo_Storage_sql extends Ingo_Storage
                 $ob->setVacationReason(String::convertCharset($data['vacation_reason'], $this->_params['charset']));
                 $ob->setVacationSubject(String::convertCharset($data['vacation_subject'], $this->_params['charset']));
                 $ob->setSaved(true);
+            } elseif ($data = @unserialize($GLOBALS['prefs']->getDefault('vacation'))) {
+                $ob->setVacationAddresses($data['addresses'], false);
+                $ob->setVacationDays($data['days']);
+                $ob->setVacationExcludes($data['excludes'], false);
+                $ob->setVacationIgnorelist($data['ignorelist']);
+                $ob->setVacationReason($data['reason']);
+                $ob->setVacationSubject($data['subject']);
+                if (isset($data['start'])) {
+                    $ob->setVacationStart($data['start']);
+                }
+                if (isset($data['end'])) {
+                    $ob->setVacationEnd($data['end']);
+                }
             }
             break;
 
@@ -222,6 +238,9 @@ class Ingo_Storage_sql extends Ingo_Storage
                 $ob->setSpamFolder($data['spam_folder']);
                 $ob->setSpamLevel((int)$data['spam_level']);
                 $ob->setSaved(true);
+            } elseif ($data = @unserialize($GLOBALS['prefs']->getDefault('spam'))) {
+                $ob->setSpamFolder($data['folder']);
+                $ob->setSpamLevel($data['level']);
             }
             break;
 
